LPS-114788 Build lang

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
@@ -9163,6 +9163,8 @@ miller-columns=أعمدة ميلر
 millimeter=ملليمتر
 million-abbreviation=مليون
 mime-type=نوع MIME
+mime-type-size-limit-configuration-name=Size Limits by Mime Type (Automatic Copy)
+mime-type-size-limit-name=Mime Type Size Limit (Automatic Copy)
 min=حد أدنى
 min-doc-freq=الحد الأدنى لتكرار المستند
 min-doc-freq-help=تعيين الحد الأدنى لتكرار المستند والذي دونه يتم تجاهل مصطلحات مستند الإدخال. في حالة تركه فارغًا، يتم تعيين القيمة الافتراضية على 5.
