--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
@@ -9163,6 +9163,8 @@ miller-columns=Колони на Милър (Automatic Translation)
 millimeter=Милиметър
 million-abbreviation=1000 (Automatic Translation)
 mime-type=MIME тип (Automatic Translation)
+mime-type-size-limit-configuration-name=Size Limits by Mime Type (Automatic Copy)
+mime-type-size-limit-name=Mime Type Size Limit (Automatic Copy)
 min=Min (Automatic Translation)
 min-doc-freq=Минимална честота на документ (Automatic Translation)
 min-doc-freq-help=Задайте минималната честота на документа, под която да се игнорират условията на входния документ. Ако остане празно, това по подразбиране е 5. (Automatic Translation)
