--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
@@ -9165,6 +9165,8 @@ miller-columns=Columnes Miller
 millimeter=Mil·límetre
 million-abbreviation=M
 mime-type=Tipus MIME
+mime-type-size-limit-configuration-name=Size Limits by Mime Type (Automatic Copy)
+mime-type-size-limit-name=Mime Type Size Limit (Automatic Copy)
 min=Mín.
 min-doc-freq=Freqüència mínima de document
 min-doc-freq-help=La freqüència mínima de document per sota de la qual els termes seran ignorats del document d'entrada. El valor per defecte és 5.
