--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
@@ -9163,6 +9163,8 @@ miller-columns=Millerovy sloupy (Automatic Translation)
 millimeter=Milimetr
 million-abbreviation=m (Automatic Translation)
 mime-type=Typ MIME (Automatic Translation)
+mime-type-size-limit-configuration-name=Size Limits by Mime Type (Automatic Copy)
+mime-type-size-limit-name=Mime Type Size Limit (Automatic Copy)
 min=Min (Automatic Translation)
 min-doc-freq=Minimální frekvence dokumentů (Automatic Translation)
 min-doc-freq-help=Nastavte minimální frekvenci dokumentu, pod kterou mají být podmínky vstupního dokumentu ignorovány. Pokud je pole prázdné, bude výchozí hodnota nastavena na hodnotu 5. (Automatic Translation)
