--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
@@ -9163,6 +9163,8 @@ miller-columns=Miller-kolonner (Automatic Translation)
 millimeter=Millimeter (Automatic Copy)
 million-abbreviation=m (Automatic Translation)
 mime-type=MIME-type (Automatic Translation)
+mime-type-size-limit-configuration-name=Size Limits by Mime Type (Automatic Copy)
+mime-type-size-limit-name=Mime Type Size Limit (Automatic Copy)
 min=Min. (Automatic Translation)
 min-doc-freq=Mindste dokumenthyppighed (Automatic Translation)
 min-doc-freq-help=Angiv den mindste dokumenthyppighed, under hvilken inputdokumentets ord skal ignoreres. Hvis feltet ikke udfyldes, angives dette som standard til 5. (Automatic Translation)
