--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
@@ -9165,6 +9165,8 @@ miller-columns=Miller-Spalten
 millimeter=Millimeter
 million-abbreviation=Mio.
 mime-type=MIME-Typ
+mime-type-size-limit-configuration-name=Size Limits by Mime Type (Automatic Copy)
+mime-type-size-limit-name=Mime Type Size Limit (Automatic Copy)
 min=Min.
 min-doc-freq=Mindest-Dokumentenhäufigkeit
 min-doc-freq-help=Die Mindest-Dokumentenhäufigkeit, bei deren Unterschreiten Terme im Eingabedokument ignoriert werden. Standard ist 5.
