--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
@@ -9163,6 +9163,8 @@ miller-columns=Στήλες μυλωνά (Automatic Translation)
 millimeter=Χιλιοστόμετρο
 million-abbreviation=Μ (Automatic Translation)
 mime-type=Τύπος MIME (Automatic Translation)
+mime-type-size-limit-configuration-name=Size Limits by Mime Type (Automatic Copy)
+mime-type-size-limit-name=Mime Type Size Limit (Automatic Copy)
 min=Μίνιμουμ (Automatic Translation)
 min-doc-freq=Ελάχιστη συχνότητα εγγράφου (Automatic Translation)
 min-doc-freq-help=Ορίστε την ελάχιστη συχνότητα εγγράφου κάτω από την οποία πρέπει να παραβλέπονται οι όροι του εγγράφου εισόδου. Εάν παραμείνει κενό, αυτό προεπιλογές σε 5. (Automatic Translation)
