--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
@@ -9165,6 +9165,8 @@ miller-columns=Columnas de Miller
 millimeter=Milímetro
 million-abbreviation=mill.
 mime-type=Tipo MIME
+mime-type-size-limit-configuration-name=Size Limits by Mime Type (Automatic Copy)
+mime-type-size-limit-name=Mime Type Size Limit (Automatic Copy)
 min=Mín.
 min-doc-freq=Frecuencia mínima del documento
 min-doc-freq-help=Frecuencia mínima del documento por debajo de la cual se omitirán los términos del documento de entrada. El valor por defecto es 5.
