--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
@@ -9163,6 +9163,8 @@ miller-columns=Milleri veerud (Automatic Translation)
 millimeter=Millimeeter
 million-abbreviation=M. (Automatic Translation)
 mime-type=MIME tüüp (Automatic Translation)
+mime-type-size-limit-configuration-name=Size Limits by Mime Type (Automatic Copy)
+mime-type-size-limit-name=Mime Type Size Limit (Automatic Copy)
 min=Min (Automatic Translation)
 min-doc-freq=Minimaalne dokumendi sagedus (Automatic Translation)
 min-doc-freq-help=Määrake minimaalne dokumendi sagedus, millest allpool sisenddokumendi tingimusi ignoreeritakse. Kui see jäetakse tühjaks, on see vaikimisi 5. (Automatic Translation)
