--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
@@ -9163,6 +9163,8 @@ miller-columns=ستون های میلر
 millimeter=میلیمتر
 million-abbreviation=محمد (Automatic Translation)
 mime-type=نوع MIME (Automatic Translation)
+mime-type-size-limit-configuration-name=Size Limits by Mime Type (Automatic Copy)
+mime-type-size-limit-name=Mime Type Size Limit (Automatic Copy)
 min=دقیقه (Automatic Translation)
 min-doc-freq=حداقل فرکانس سند (Automatic Translation)
 min-doc-freq-help=تعیین حداقل فرکانس سند در زیر که شرایط سند ورودی باید نادیده گرفته شود. اگر خالی مانده باشد، این پیش فرض ها به ۵ می رسد. (Automatic Translation)
