--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
@@ -9163,6 +9163,8 @@ miller-columns=Miller-sarakkeet
 millimeter=Millimetri
 million-abbreviation=M
 mime-type=MIME-tyyppi
+mime-type-size-limit-configuration-name=Size Limits by Mime Type (Automatic Copy)
+mime-type-size-limit-name=Mime Type Size Limit (Automatic Copy)
 min=Min
 min-doc-freq=Pienin Asiakirjan Toistuvuus
 min-doc-freq-help=Asiakirjojen vähimmäistiheys, jonka alle ehdot ohitetaan syöteasiakirjasta. Oletusarvo on 5.
