--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
@@ -9165,6 +9165,8 @@ miller-columns=Colonnes Miller
 millimeter=Millimètre
 million-abbreviation=M
 mime-type=Type MIME
+mime-type-size-limit-configuration-name=Size Limits by Mime Type (Automatic Copy)
+mime-type-size-limit-name=Mime Type Size Limit (Automatic Copy)
 min=Min
 min-doc-freq=Fréquence de document minimale
 min-doc-freq-help=Définissez la fréquence minimale en dessous de laquelle les termes du document de saisie doivent être ignorés. Si laissé vide, la valeur par défaut est 5.
