--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
@@ -9163,6 +9163,8 @@ miller-columns=मिलर कॉलम (Automatic Translation)
 millimeter=मिलीमीटर
 million-abbreviation=लाख (Automatic Translation)
 mime-type=माइम प्रकार (Automatic Translation)
+mime-type-size-limit-configuration-name=Size Limits by Mime Type (Automatic Copy)
+mime-type-size-limit-name=Mime Type Size Limit (Automatic Copy)
 min=मिनट (Automatic Translation)
 min-doc-freq=न्यूनतम दस्तावेज़ आवृत्ति (Automatic Translation)
 min-doc-freq-help=न्यूनतम दस्तावेज़ आवृत्ति निर्धारित करें जिसके नीचे इनपुट दस्तावेज़ की शर्तों को नजरअंदाज किया जाना है। यदि खाली छोड़ दिया जाता है, तो यह 5 तक चूक करता है। (Automatic Translation)
