--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
@@ -9166,6 +9166,8 @@ miller-columns=Miller oszlopok
 millimeter=Milliméter
 million-abbreviation=H
 mime-type=MIME-típus
+mime-type-size-limit-configuration-name=Size Limits by Mime Type (Automatic Copy)
+mime-type-size-limit-name=Mime Type Size Limit (Automatic Copy)
 min=Min.
 min-doc-freq=Dokumentumok minimális gyakorisága
 min-doc-freq-help=A dokumentumok minimális frekvenciája, amely alatt a bemenő dokumentumból származó kifejezéseket figyelmen kívül hagyjuk. Az alapértelmezés 5.
