--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
@@ -9164,6 +9164,8 @@ miller-columns=Colonne Miller (Automatic Translation)
 millimeter=Millimetro
 million-abbreviation=M (Automatic Translation)
 mime-type=Tipo MIME (Automatic Translation)
+mime-type-size-limit-configuration-name=Size Limits by Mime Type (Automatic Copy)
+mime-type-size-limit-name=Mime Type Size Limit (Automatic Copy)
 min=Minimo (Automatic Translation)
 min-doc-freq=Frequenza minima del documento (Automatic Translation)
 min-doc-freq-help=Impostare la frequenza minima del documento al di sotto della quale i termini del documento di input devono essere ignorati. Se lasciato vuoto, il valore predefinito è 5. (Automatic Translation)
