--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
@@ -9163,6 +9163,8 @@ miller-columns=עמודות מילר (Automatic Translation)
 millimeter=מילימטר
 million-abbreviation=ז (Automatic Translation)
 mime-type=סוג MIME (Automatic Translation)
+mime-type-size-limit-configuration-name=Size Limits by Mime Type (Automatic Copy)
+mime-type-size-limit-name=Mime Type Size Limit (Automatic Copy)
 min=דקות (Automatic Translation)
 min-doc-freq=תדירות מסמך מינימלית (Automatic Translation)
 min-doc-freq-help=הגדר את תדירות המסמך המינימלית שמתחתיה יש להתעלם מתנאי מסמך הקלט. אם אפשרות זו נשארת ריקה, ברירת המחדל היא 5. (Automatic Translation)
