--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
@@ -9165,6 +9165,8 @@ miller-columns=カスケーディングリスト
 millimeter=ミリメートル
 million-abbreviation=M
 mime-type=MIME 種別
+mime-type-size-limit-configuration-name=Size Limits by Mime Type (Automatic Copy)
+mime-type-size-limit-name=Mime Type Size Limit (Automatic Copy)
 min=最小
 min-doc-freq=最小文書頻度
 min-doc-freq-help=入力ドキュメントから用語が無視される最小文書頻度です。デフォルトは5です。
