--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
@@ -9163,6 +9163,8 @@ miller-columns=밀러 칼럼 (Automatic Translation)
 millimeter=밀리미터
 million-abbreviation=M (Automatic Translation)
 mime-type=마임 타입 (Automatic Translation)
+mime-type-size-limit-configuration-name=Size Limits by Mime Type (Automatic Copy)
+mime-type-size-limit-name=Mime Type Size Limit (Automatic Copy)
 min=분 (Automatic Translation)
 min-doc-freq=최소 문서 빈도 (Automatic Translation)
 min-doc-freq-help=입력 문서의 용어를 무시할 수 있는 최소 문서 빈도를 아래에 설정합니다. 공백을 두면 기본값이 5로 기본값입니다. (Automatic Translation)
