--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
@@ -9163,6 +9163,8 @@ miller-columns=Miller stulpeliai (Automatic Translation)
 millimeter=Milimetro (Automatic Translation)
 million-abbreviation=M (Automatic Translation)
 mime-type=MIME tipas (Automatic Translation)
+mime-type-size-limit-configuration-name=Size Limits by Mime Type (Automatic Copy)
+mime-type-size-limit-name=Mime Type Size Limit (Automatic Copy)
 min=Min (Automatic Translation)
 min-doc-freq=Minimalus dokumento dažnumas (Automatic Translation)
 min-doc-freq-help=Nustatykite minimalų dokumento dažnumą, žemiau kurio turi būti nepaisoma įvesties dokumento terminų. Jei liko tuščias, tai pagal numatytuosius nustatymus iki 5. (Automatic Translation)
