--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
@@ -9163,6 +9163,8 @@ miller-columns=Tiang Miller (Automatic Translation)
 millimeter=Millimeter (Automatic Translation)
 million-abbreviation=M (Automatic Translation)
 mime-type=Jenis MIME (Automatic Translation)
+mime-type-size-limit-configuration-name=Size Limits by Mime Type (Automatic Copy)
+mime-type-size-limit-name=Mime Type Size Limit (Automatic Copy)
 min=Minimum (Automatic Translation)
 min-doc-freq=Kekerapan Dokumen Minimum (Automatic Translation)
 min-doc-freq-help=Tetapkan kekerapan dokumen minimum di mana terma dokumen input akan diabaikan. Jika dibiarkan kosong, ini lalai kepada 5. (Automatic Translation)
