--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
@@ -9163,6 +9163,8 @@ miller-columns=Miller-kolonner
 millimeter=Milimeter
 million-abbreviation=M (Automatic Translation)
 mime-type=MIME-type (Automatic Translation)
+mime-type-size-limit-configuration-name=Size Limits by Mime Type (Automatic Copy)
+mime-type-size-limit-name=Mime Type Size Limit (Automatic Copy)
 min=Min (Automatic Translation)
 min-doc-freq=Minste dokumentfrekvens (Automatic Translation)
 min-doc-freq-help=Angi minimum dokumentfrekvensen som termene for inndatadokumentet skal ignoreres under. Hvis du lar feltet stå tomt, settes dette som standard til 5. (Automatic Translation)
