--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
@@ -9166,6 +9166,8 @@ miller-columns=Miller-kolommen
 millimeter=Millimeter
 million-abbreviation=mio
 mime-type=MIME-type
+mime-type-size-limit-configuration-name=Size Limits by Mime Type (Automatic Copy)
+mime-type-size-limit-name=Mime Type Size Limit (Automatic Copy)
 min=Min.
 min-doc-freq=Minimale frequentie in document
 min-doc-freq-help=De minimale frequentie in een document waaronder termen van het inputdocument worden genegeerd. Standaardwaarde = 5.
