--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
@@ -9163,6 +9163,8 @@ miller-columns=Kolumny Młynarskie (Automatic Translation)
 millimeter=Milimetr
 million-abbreviation=M (Automatic Translation)
 mime-type=Typ MIME (Automatic Translation)
+mime-type-size-limit-configuration-name=Size Limits by Mime Type (Automatic Copy)
+mime-type-size-limit-name=Mime Type Size Limit (Automatic Copy)
 min=Min (Automatic Translation)
 min-doc-freq=Minimalna częstotliwość dokumentu (Automatic Translation)
 min-doc-freq-help=Ustaw minimalną częstotliwość dokumentu, poniżej której mają być ignorowane warunki dokumentu wejściowego. Jeśli pozostanie puste, wartość domyślna to 5. (Automatic Translation)
