--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
@@ -9165,6 +9165,8 @@ miller-columns=Colunas Miller (Automatic Translation)
 millimeter=Milímetro
 million-abbreviation=m (Automatic Translation)
 mime-type=Tipo MIME (Automatic Translation)
+mime-type-size-limit-configuration-name=Size Limits by Mime Type (Automatic Copy)
+mime-type-size-limit-name=Mime Type Size Limit (Automatic Copy)
 min=Min (Automatic Translation)
 min-doc-freq=Frequência mínima de documentos (Automatic Translation)
 min-doc-freq-help=Defina a frequência mínima do documento abaixo da qual os termos do documento de entrada devem ser ignorados. Se deixado em branco, isso fica a 5. (Automatic Translation)
