--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
@@ -9163,6 +9163,8 @@ miller-columns=Coloane miller (Automatic Translation)
 millimeter=Millimetru
 million-abbreviation=M (Automatic Translation)
 mime-type=Tip MIME (Automatic Translation)
+mime-type-size-limit-configuration-name=Size Limits by Mime Type (Automatic Copy)
+mime-type-size-limit-name=Mime Type Size Limit (Automatic Copy)
 min=Min (Automatic Translation)
 min-doc-freq=Frecvența minimă a documentului (Automatic Translation)
 min-doc-freq-help=Setați frecvența minimă a documentului sub care trebuie ignorați termenii documentului de intrare. Dacă este lăsat necompletat, acest lucru este implicit la 5. (Automatic Translation)
