--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ru.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ru.properties
@@ -9163,6 +9163,8 @@ miller-columns=Миллер колонки (Automatic Translation)
 millimeter=Миллиметры
 million-abbreviation=м (Automatic Translation)
 mime-type=Тип MIME (Automatic Translation)
+mime-type-size-limit-configuration-name=Size Limits by Mime Type (Automatic Copy)
+mime-type-size-limit-name=Mime Type Size Limit (Automatic Copy)
 min=Мин (Automatic Translation)
 min-doc-freq=Минимальная частота документов (Automatic Translation)
 min-doc-freq-help=Установите минимальную частоту документов, ниже которой должны быть проигнорированы условия входного документа. Если оставить пустым, это по умолчанию до 5. (Automatic Translation)
