--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
@@ -9163,6 +9163,8 @@ miller-columns=Millerove stĺpce (Automatic Translation)
 millimeter=Milimeter
 million-abbreviation=M. (Automatic Translation)
 mime-type=Typ MIME (Automatic Translation)
+mime-type-size-limit-configuration-name=Size Limits by Mime Type (Automatic Copy)
+mime-type-size-limit-name=Mime Type Size Limit (Automatic Copy)
 min=Min (Automatic Translation)
 min-doc-freq=Minimálna frekvencia dokumentov (Automatic Translation)
 min-doc-freq-help=Nastavte minimálnu frekvenciu dokumentov, pod ktorou sa majú ignorovať výrazy vstupného dokladu. Ak ponecháte pole prázdne, predvolená hodnota je 5. (Automatic Translation)
