--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
@@ -9163,6 +9163,8 @@ miller-columns=Miller-kolumner
 millimeter=Millimeter
 million-abbreviation=M
 mime-type=MIME-typ
+mime-type-size-limit-configuration-name=Size Limits by Mime Type (Automatic Copy)
+mime-type-size-limit-name=Mime Type Size Limit (Automatic Copy)
 min=Min
 min-doc-freq=Minsta dokumentfrekvens
 min-doc-freq-help=Minsta dokumentfrekvens under vilken termerna kommer att ignoreras från indatadokumentet. Standard är 5.
