--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ta_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ta_IN.properties
@@ -9163,6 +9163,8 @@ miller-columns=மில்லர் பத்திகள்
 millimeter=மில்லிமீட்டர்
 million-abbreviation=M (Automatic Copy)
 mime-type=MIME Type (Automatic Copy)
+mime-type-size-limit-configuration-name=Size Limits by Mime Type (Automatic Copy)
+mime-type-size-limit-name=Mime Type Size Limit (Automatic Copy)
 min=Min (Automatic Copy)
 min-doc-freq=Minimum Document Frequency (Automatic Copy)
 min-doc-freq-help=Set the minimum document frequency below which the input document's terms are to be ignored. If left blank, this defaults to 5. (Automatic Copy)
