--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_th.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_th.properties
@@ -9163,6 +9163,8 @@ miller-columns=คอลัมน์มิลเลอร์
 millimeter=มิลลิเมตร (Automatic Translation)
 million-abbreviation=เมตร (Automatic Translation)
 mime-type=ประเภท MIME (Automatic Translation)
+mime-type-size-limit-configuration-name=Size Limits by Mime Type (Automatic Copy)
+mime-type-size-limit-name=Mime Type Size Limit (Automatic Copy)
 min=นาที (Automatic Translation)
 min-doc-freq=ความถี่ต่ําสุดของเอกสาร (Automatic Translation)
 min-doc-freq-help=ตั้งค่าความถี่ต่ําสุดของเอกสารด้านล่างซึ่งเงื่อนไขของเอกสารที่ป้อนเข้าจะถูกละเว้น ถ้าปล่อยว่างไว้ (Automatic Translation)
