--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
@@ -9163,6 +9163,8 @@ miller-columns=Miller Sütunları (Automatic Translation)
 millimeter=Milimetre
 million-abbreviation=M (Automatic Translation)
 mime-type=MIME Tipi (Automatic Translation)
+mime-type-size-limit-configuration-name=Size Limits by Mime Type (Automatic Copy)
+mime-type-size-limit-name=Mime Type Size Limit (Automatic Copy)
 min=Dk (Automatic Translation)
 min-doc-freq=Minimum Belge Sıklığı (Automatic Translation)
 min-doc-freq-help=Giriş belgesinin koşullarının yoksayılacağı minimum belge sıklığını ayarlayın. Boş bırakılırsa, bu varsayılan değer 5 olur. (Automatic Translation)
