--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
@@ -9163,6 +9163,8 @@ miller-columns=Міллер колони (Automatic Translation)
 millimeter=Міліметри
 million-abbreviation=М (Automatic Translation)
 mime-type=MIME-тип (Automatic Translation)
+mime-type-size-limit-configuration-name=Size Limits by Mime Type (Automatic Copy)
+mime-type-size-limit-name=Mime Type Size Limit (Automatic Copy)
 min=Хв (Automatic Translation)
 min-doc-freq=Мінімальна частота документа (Automatic Translation)
 min-doc-freq-help=Встановіть мінімальну частоту документа, нижче якої слід ігнорувати терміни вхідного документа. Якщо залишити це поле порожнім, типовим значенням буде 5. (Automatic Translation)
