--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
@@ -9163,6 +9163,8 @@ miller-columns=Cột Miller (Automatic Translation)
 millimeter=Đơn vị milimet
 million-abbreviation=M. (Automatic Translation)
 mime-type=Loại MIME (Automatic Translation)
+mime-type-size-limit-configuration-name=Size Limits by Mime Type (Automatic Copy)
+mime-type-size-limit-name=Mime Type Size Limit (Automatic Copy)
 min=Phút (Automatic Translation)
 min-doc-freq=Tần số tài liệu tối thiểu (Automatic Translation)
 min-doc-freq-help=Đặt tần suất tài liệu tối thiểu bên dưới mà các điều khoản của tài liệu đầu vào sẽ bị bỏ qua. Nếu để trống, điều này mặc định là 5. (Automatic Translation)
