--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
@@ -9165,6 +9165,8 @@ miller-columns=Miller 列
 millimeter=毫米
 million-abbreviation=M
 mime-type=MIME 类型
+mime-type-size-limit-configuration-name=Size Limits by Mime Type (Automatic Copy)
+mime-type-size-limit-name=Mime Type Size Limit (Automatic Copy)
 min=最少
 min-doc-freq=最小文档频率
 min-doc-freq-help=最小文档频率，低于此值时词将在输入文档中被忽略。默认值为 5。
