--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
@@ -9164,6 +9164,8 @@ miller-columns=Miller 列
 millimeter=毫米
 million-abbreviation=M
 mime-type=MIME 類型
+mime-type-size-limit-configuration-name=Size Limits by Mime Type (Automatic Copy)
+mime-type-size-limit-name=Mime Type Size Limit (Automatic Copy)
 min=最小
 min-doc-freq=最小文件頻率
 min-doc-freq-help=設置要忽略輸入文件條款的最低文件頻率。如果留空，則預設為5。 (Automatic Translation)
