--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_gl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_gl.properties
@@ -9163,6 +9163,8 @@ miller-columns=Columnas Miller
 millimeter=Milímetro
 million-abbreviation=mill.
 mime-type=Tipo MIME
+mime-type-size-limit-configuration-name=Size Limits by Mime Type (Automatic Copy)
+mime-type-size-limit-name=Mime Type Size Limit (Automatic Copy)
 min=Mín.
 min-doc-freq=Minimum Document Frequency (Automatic Copy)
 min-doc-freq-help=Set the minimum document frequency below which the input document's terms are to be ignored. If left blank, this defaults to 5. (Automatic Copy)
