--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
@@ -9163,6 +9163,8 @@ miller-columns=Kolom Miller (Automatic Translation)
 millimeter=Milimeter
 million-abbreviation=M (Automatic Translation)
 mime-type=Jenis MIME (Automatic Translation)
+mime-type-size-limit-configuration-name=Size Limits by Mime Type (Automatic Copy)
+mime-type-size-limit-name=Mime Type Size Limit (Automatic Copy)
 min=Min (Automatic Translation)
 min-doc-freq=Frekuensi Dokumen Minimum (Automatic Translation)
 min-doc-freq-help=Atur frekuensi dokumen minimum di bawah ini yang persyaratan dokumen inputnya akan diabaikan. Jika dibiarkan kosong, default ini menjadi 5. (Automatic Translation)
