--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl_BE.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl_BE.properties
@@ -9166,6 +9166,8 @@ miller-columns=Miller Columns (Automatic Copy)
 millimeter=Millimeter (Automatic Copy)
 million-abbreviation=M (Automatic Copy)
 mime-type=MIME Type (Automatic Copy)
+mime-type-size-limit-configuration-name=Size Limits by Mime Type (Automatic Copy)
+mime-type-size-limit-name=Mime Type Size Limit (Automatic Copy)
 min=Min (Automatic Copy)
 min-doc-freq=Minimum Document Frequency (Automatic Copy)
 min-doc-freq-help=Set the minimum document frequency below which the input document's terms are to be ignored. If left blank, this defaults to 5. (Automatic Copy)
