--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
@@ -9163,6 +9163,8 @@ miller-columns=Colunas Miller
 millimeter=Milímetro
 million-abbreviation=mi
 mime-type=Tipo MIME
+mime-type-size-limit-configuration-name=Size Limits by Mime Type (Automatic Copy)
+mime-type-size-limit-name=Mime Type Size Limit (Automatic Copy)
 min=Mín.
 min-doc-freq=Frequência mínima de documento
 min-doc-freq-help=A frequência mínima de documento abaixo da qual os termos serão ignorados do documento de entrada. Como padrão é 5.
