--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
@@ -9163,6 +9163,8 @@ miller-columns=Mlinarjevi stolpci (Automatic Translation)
 millimeter=Milimeter
 million-abbreviation=M (Automatic Translation)
 mime-type=Vrsta MIME (Automatic Translation)
+mime-type-size-limit-configuration-name=Size Limits by Mime Type (Automatic Copy)
+mime-type-size-limit-name=Mime Type Size Limit (Automatic Copy)
 min=Min (Automatic Translation)
 min-doc-freq=Najmanjša pogostnost dokumenta (Automatic Translation)
 min-doc-freq-help=Nastavite minimalno frekvenco dokumenta, pod katero je treba prezreti pogoje vhodnega dokumenta. Če ostane prazno, je to privzeto na 5. (Automatic Translation)
